tests/cases/compiler-development/artifact/errors/diagnostic-enum-payload-invalid-move.diagnostic
diagnostic error code=O0001 family=ownership message="cannot move runtime-dependent owning enum payload slot 'item.0' outside match because enum cases do not share the same owner payload layout; use match" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-enum-payload-invalid-move.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-enum-payload-invalid-move.ari" bytes=415
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-enum-payload-invalid-move.ari" line=24 column=20 end_line=24 end_column=21 byte_start=330 byte_end=331 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-enum-payload-invalid-move.ari:24:20\n    |\n 24 |   let token = item.0;\n    |                    ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-enum-payload-invalid-move.ari" line=23 column=4 end_line=23 end_column=11 byte_start=276 byte_end=283 message="owning enum binding 'item' declared here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-enum-payload-invalid-move.ari:23:4\n    |\n 23 | fn consume(item: MaybeOwned) -> i64 {\n    |    ^^^^^^^"
  Note index=0 location=none message="owning enum payload storage can be case-dependent, so a payload projection outside match cannot prove which owner slot is active"
  Help index=0 location=none message="move 'item.0' inside the matching enum arm, or use an enum layout where every case has the same owning payload slot"
